@@ -1,6 +1,8 @@
 devel
 -----
 
+* Only advance shard version after follower is reported in sync in agency.
+
 * Fixed cluster behavior with HotBackup and non-existing backups on DB-Servers.
 
 * Fixed that, when performing a graph AQL query while a (graceful) failover for
@@ -41,9 +43,9 @@ devel
 
 * Fixed bad behavior that led to unnecessary additional revision tree rebuilding
   on server restart.
-  
+
 * Allow AQL queries on DB-Servers again. This is not an official supported
-  feature, but is sometimes used for debugging. Previous changes made it 
+  feature, but is sometimes used for debugging. Previous changes made it
   impossible to run a query on a local shard.
 
 * Fix restoring old arangodumps from ArangoDB 3.3 and before, which had index
